--- a/gameover.html
+++ b/gameover.html
@@ -38,7 +38,7 @@
     </div>
     <script>
         function goback(){
-            window.location.href="math.html";
+            window.location.href="index.html";
         }
       let a=localStorage.getItem('score');
       console.log(a);
